test/Fail/PostulateMacro.err
PostulateMacro.agda:15.8-19: error: [Unquote.NonCanonical]
Cannot unquote non-canonical type checking computation
  stuck
when checking that the expression unquote not-so-good has type Nat
